Fixed z-index bug

--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -47,6 +47,7 @@ body {
     flex-wrap: nowrap;
     align-items: center;
     justify-content: space-between;
+    z-index: 1;
     transition: var(--transition);
 }
 
